crates/cli/tests/snapshots/ports__ports_install_fails_on_low_port_conflict_before_writing_prepared_artifacts.snap
---
source: crates/cli/tests/ports.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "Port redirect preparation failed\n  Loopback TCP port 80 is unavailable; PV could not identify a listening process.\n  find it: sudo lsof -nP -iTCP:80 -sTCP:LISTEN\n  Stop the conflicting service, then run `pv ports:install` again.\n",
    stderr: "",
}
