crates/cli/tests/snapshots/ports__ports_install_names_low_port_owners.snap
---
source: crates/cli/tests/ports.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "Port redirect preparation failed\n  Loopback TCP port 80 is unavailable. TCP listeners reported on this port: nginx (pid 412).\n  Loopback TCP port 443 is unavailable. TCP listeners reported on this port: Python (pid 501).\n  Stop the conflicting service, then run `pv ports:install` again.\n",
    stderr: "",
}
