crates/cli/tests/snapshots/ports__ports_install_preserves_existing_gateway_assignments_after_later_failure.snap
---
source: crates/cli/tests/ports.rs
expression: "(output, assignments)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                1,
            ),
        ),
        stdout: "Prepared PV port redirect config\n  anchor path: <tempdir>/home/.pv/config/pf/com.prvious.pv\n  pf.conf reference path: <tempdir>/home/.pv/config/pf/pf.conf\n  HTTP redirect: 127.0.0.1:80 -> 127.0.0.1:48080\n  HTTPS redirect: 127.0.0.1:443 -> 127.0.0.1:48443\n",
        stderr: "error: system integration command `/sbin/pfctl -s nat` exited with exit status: 1\n",
    },
    [
        PortAssignment {
            owner: Gateway(
                Http,
            ),
            port: 48080,
            updated_at: "<timestamp>",
        },
        PortAssignment {
            owner: Gateway(
                Https,
            ),
            port: 48443,
            updated_at: "<timestamp>",
        },
        PortAssignment {
            owner: Gateway(
                Admin,
            ),
            port: 2019,
            updated_at: "<timestamp>",
        },
    ],
)
