crates/cli/tests/snapshots/ports__ports_install_refuses_a_new_low_port_conflict_when_redirects_already_match.snap
---
source: crates/cli/tests/ports.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "Port redirect preparation failed\n  Loopback TCP port 80 is in use by nginx (pid 412).\n  Stop the conflicting service, then run `pv ports:install` again.\n",
    stderr: "",
}
